# showcase

./: .gitignore  .gitmodules  README.md
FileVersionator2000/: .gitignore  FileVersionator2000.sln  README.md
FileVersionator2000/BusinessLayer/: BusinessLayer.csproj
FileVersionator2000/BusinessLayer/DTOs/: FileIsTrackedDto.cs  FileStateName.cs  LastFileOperationDto.cs
FileVersionator2000/BusinessLayer/Installers/: BlInstaller.cs
FileVersionator2000/BusinessLayer/Services/: FileService.cs
FileVersionator2000/Commons/: FileOperation.cs
FileVersionator2000/DataLayer/: DataLayer.csproj  Database.cs  IDatabase.cs
FileVersionator2000/DataLayer/Entities/: FileHistory.cs  FileState.cs  FileVersion.cs
FileVersionator2000/DataLayer/Installers/: DbInstaller.cs
FileVersionator2000/PresentationLayer.MVC/: PresentationLayer.MVC.csproj  Program.cs
FileVersionator2000/PresentationLayer.MVC/Controllers/: FileController.cs
FileVersionator2000/PresentationLayer.MVC/Models/: ErrorViewModel.cs  ListTrackedFilesModel.cs
FileVersionator2000/PresentationLayer.MVC/Properties/: launchSettings.json
FileVersionator2000/PresentationLayer.MVC/Views/: _ViewImports.cshtml
FileVersionator2000/Utils/: HashUtils.cs
HW1/: 1CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  hw1.cpp  hw1.hpp  install_manifest.txt  sample.cpp  sample.txt  src.cpp  tests.cpp  testy
HW2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  rational.cpp  tests.cpp
HW3/: CMakeLists.txt  client  client.cpp  connectionhandler.cpp  connectionhandler.h  database.cpp  database.h  main.cpp  readme.md  server  server.cpp  tests.cpp
HW4/: client.cpp  client.h  config.cpp  connectionhandler.cpp  databaseupdater.cpp  mainclient.cpp  myserver.h  readme.md
Image_processing/: 524805-My_ObjectFinder.java  README.md  candy_crush_01.tif  candy_crush_02.tif  candy_crush_03.tif  output_candy_crush_01.tif  output_candy_crush_02.tif  output_candy_crush_03.tif
PowerPals/: README.md
PowerPals/BlazorServerAuthenticationAndAuthorization/: BlazorServerAuthenticationAndAuthorization.csproj  BlazorServerAuthenticationAndAuthorization.sln  Program.cs  README.md  _Imports.razor
PowerPals/BlazorServerAuthenticationAndAuthorization/Authentication/: CustomAuthenticationStateProvider.cs  UserSession.cs
PowerPals/BlazorServerAuthenticationAndAuthorization/Commons/: CreateGym.razor  CreatePost.razor  CreateReview.razor  ItemList.razor  ItemPreview.razor  PostList.razor  PostWidget.razor  ReviewList.razor  ReviewWidget.razor
PowerPals/BlazorServerAuthenticationAndAuthorization/Pages/: _Layout.cshtml
PowerPals/BlazorServerAuthenticationAndAuthorization/Shared/: EmptyLayout.razor  MainLayout.razor  SigninLayout.razor
PowerPals/BlazorServerAuthenticationAndAuthorization/models/: AccountRegisterForm.cs  AdditionalDetailsModel.cs  LoginForm.cs  Preview.cs  RegisterGymForm.cs  UserEditForm.cs
PowerPals/PowerPalsServices/: GymService.cs  PostService.cs  PowerPalsServices.csproj  ReviewService.cs  UserService.cs
PowerPals/powerPalsDb/Data/: PowerPalsContext.cs
PowerPals/powerPalsDb/Migrations/: 20240520144900_init.Designer.cs  20240520144900_init.cs  20240521085446_2.Designer.cs  20240521085446_2.cs  20240521085906_3.Designer.cs  20240521085906_3.cs  20240521090218_5.Designer.cs  20240521090218_5.cs  PowerPalsContextModelSnapshot.cs
PowerPals/powerPalsDb/Models/: Friendship.cs  Gym.cs  GymGoer.cs  Post.cs  Review.cs  Tag.cs  User.cs
QT_homeworks/HW1/: hw1.hpp  tests.cpp
QT_homeworks/HW2/: CMakeLists.txt  rational.cpp  rational.h
QT_homeworks/HW3/: connectionhandler.cpp  database.cpp  database.h  server.h  tests.cpp
QT_homeworks/HW4/: CMakeLists.txt  client.h  config.h  database.cpp  database.h  mainclient.cpp  myserver.cpp
Qt_calculator/: mainwindow.ui
Qt_rss_feed_app/: connectionhandler.h  databaseupdater.h  main.cpp
diesel-time-deliveries/: README.md
diesel-time-deliveries/DieselTimeDeliveries/: .env.example  .gitignore  Delivery.csproj  DieselTimeDeliveries.sln  README.md  docker-compose.yml
diesel-time-deliveries/DieselTimeDeliveries/DieselTimeDeliveries/: DieselTimeDeliveries.csproj  DieselTimeDeliveries.http  EnvConstants.cs  Program.cs  appsettings.json
diesel-time-deliveries/DieselTimeDeliveries/DieselTimeDeliveries.AppHost/: DieselTimeDeliveries.AppHost.csproj  Program.cs
diesel-time-deliveries/DieselTimeDeliveries/DieselTimeDeliveries.ServiceDefaults/: DieselTimeDeliveries.ServiceDefaults.csproj  Extensions.cs
diesel-time-deliveries/DieselTimeDeliveries/Planning/: Planning.csproj
diesel-time-deliveries/DieselTimeDeliveries/Routing/: Routing.csproj  RoutingInstaller.cs
diesel-time-deliveries/DieselTimeDeliveries/SharedKernel/: AggregateRoot.cs  BaseEntity.cs  Entity.cs  ValueObject.cs
diesel-time-deliveries/DieselTimeDeliveries/Warehouse/: Warehouse.csproj  WarehouseInstaller.cs
diesel-time-deliveries/WebApplication1/: WebApplication1.sln
diesel-time-deliveries/WebApplication1/WebApplication1/: Program.cs  WebApplication1.csproj  test.cs
juiceworld/: .env.example  .gitlab-ci.yml  JuiceWorld.sln  README.md  docker-compose.yml
juiceworld/DataAccessLayer.EF/: DatabaseMigrator.cs  MigrateDatabaseOnStartup.cs
juiceworld/PresentationLayer.Mvc/: Constants.cs
notepad-minus-minus/: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md
notepad-minus-minus/assets/: main.css
notepad-minus-minus/src/: main.rs
notepad-minus-minus/src/models/: file_system.rs  historyevent.rs  mod.rs  network.rs  panels.rs  sessions.rs  tabs.rs  terminal_state.rs  text.rs
notepad-minus-minus/src/views/: edit_history.rs  editor.rs  find_replace.rs  mod.rs  sessionexplorer.rs  side_panel.rs  tabs.rs  terminal.rs
notepad-minus-minus/src/views/dialogs/: error.rs  fs_operations.rs  mod.rs
notepad-minus-minus/src/views/file_explorer/: context_menu.rs  directory.rs  file.rs  file_explorer.rs  mod.rs
programming_Cpp/example1/: README.md  json.cpp
programming_Cpp/example2/: README.md  network.cpp
programming_Cpp/example3/: README.md  chess.cpp
(+144 files in other folders)
