[package]
name = "notepad-minus-minus"
version = "0.1.0"
authors = ["Richard Schwarz <521781@mail.muni.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.1"
async-std = "1.13.0"
dioxus = { version = "0.6.2", features = [] }
dioxus-heroicons = "0.4.0"
itertools = "0.14.0"
rfd = "0.15.2"
ropey = "1.6.1"
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["full"] }
dotenvy = "0.15.7"
rayon = "1.10.0"
uuid = { version = "1.1", features = ["v4"] }
libp2p = { version = "0.55", features = ["full", "relay"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.217"
serde_json = "1.0"
pretty_env_logger = "0.4"
stun = "0.7.0"



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
